# capsenz.github.io

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
2023/09/19/writing-a-blog/: index.html
2024/09/12/my-time-at-ef/: index.html
about_me/: index.html
docs/: about_me.md  index.md
docs/posts/: My_time_at_EF.md  writing_a_blog.md
