[project]
name = "capsenz-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Carl-Philipp Senze", email = "carlpsenze@gmail.com" }
]
dependencies = [
    "mkdocs-material>=9.5.34",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/capsenz_github_io"]
